  update documentation for this
- add -X and -x argument for setting the serial automatically overriding what
  is in the zonefile
- refused answers now tag on the question, and add on a possible EDNS0 tag,
  which it did not do before.
- fixed referrer NS code with plain subzones incorporating some DNSSEC elements
- remote logging (which was added in BETA_7) has been removed


Changes in RELEASE_1_3 from RELEASE_1_2
- created a "zinclude" config, which will only allow zone files to be 
	included and nothing else inside that. 
- created a manpage for dddctl
- fixed a timeout issue with notify hosts, refactored code (axfr.c)
- replaced dd-convert with dddctl which is a utility that can do a bit more,
  including dnssec key roll-over with ZSK key.
- added a DNS conversion tool to convert delphinusdnsd zonefiles to BIND style.
- fixed ENT's with DNSSEC (missing NSEC3 in ENT's, RFC 7129).
- added regressions for the developing platform (OpenBSD)

Changes in RELEASE_1_2 from RELEASE_1_1

- remove SPF support (deprecated RFC 7208 section 3.1)
- add TLSA anyreply support (affects AXFR)
- change BerkeleyDB to tree(3) RB_* macros (faster?)
- fix EDNS compliancy:  https://ednscomp.isc.org/ednscomp/5a70566c18
- fix truncation code and give empty answers with TC bit set when appropriate
- fix CNAME's with DNSSEC
- fix PTR's with DNSSEC
- move to imsg functions with privsep for IPC messaging
- OpenBSD delphinusdnsd is pledged

Changes in RELEASE_1_1 from RELEASE_1_0

- dd-convert.c written to replace dd-convert.rb.  It now supports TLSA RR's as
an added bonus.  This utility does not rely on any external (BIND) tools except
for the linkage against openssl/libressl.
- manpage for dd-convert
- Mac OS X port has been dropped
- RFC 8020 compliance with empty non-terminal names starting this release
- Linux now depends on libbsd

Changes in RELEASE_1_0 from BETA_9

- name change from wildcarddnsd to delphinusdnsd